<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareSDKDemo4IPet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shareToSinaWeiboText">分享到新浪微博简单范例</string>
    <string name="shareToSinaWeiboButton">分享到新浪微博</string>
    <string name="oneKeyShareText">一键分享（有界面）简单范例</string>
    <string name="oneKeyShareButton">一键分享（有界面）</string>
    <string name="oneKeyShareSilentText">一键分享（无界面，直接分享）简单范例</string>
    <string name="oneKeyShareSilentButton">一键分享（无界面，直接分享）</string>
    <string name="authorizeText">第三方帐号登录简单范例</string>
    <string name="qqAuthorizeButton">QQ登录</string>
    <string name="sinaWeiboAuthorizeButton">新浪微博帐号登录</string>
    
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="register">注册</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="ok">确定</string>

</resources>